# timetracer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  GITHUB_RELEASE_v1.5.0.md  INTEGRATION_IMPLEMENTATION_GUIDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  dashboard.html  pyproject.toml
.agent/: implementation_plan_v1.4.0.md
.agent/planning/: COMPLETE_FEATURE_AUDIT.md  GITHUB_RELEASE_FINAL.md  GROWTH_STRATEGY.md  INTEGRATION_ROADMAP.md  PYMONGO_STARLETTE_GUIDE.md  SOCIAL_MEDIA_ANNOUNCEMENTS.md  TEST_REPORT.md  v1.6.0_PLAN.md  v1.6.0_PROGRESS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: compression.md  configuration.md  dashboard.md  django.md  flask.md  integrations.md  motor.md  plugins.md  pymongo.md  pytest.md  quickstart.md  s3-storage.md  search.md  security.md  sqlalchemy.md  starlette.md  why-timetracer.md
examples/compression_example/: README.md  app.py  compare_sizes.py  test_compression_example.py
examples/django_app/: README.md  settings.py  test_views.py  urls.py  views.py
examples/fastapi_aiohttp/: README.md  app.py  requirements.txt  test_app.py
examples/fastapi_httpx/: README.md  app.py  requirements.txt  test_all_features.py  test_complete.py  test_integration.py
examples/flask_httpx/: README.md  app.py  requirements.txt
examples/full_integration/: README.md  app.py  test_e2e_real.py  test_edge_cases.py
examples/hybrid_replay/: README.md  app.py
examples/motor_mongodb/: README.md  app.py  test_motor_example.py
examples/pymongo_flask_app/: README.md  app.py
examples/pytest_example/: README.md  app.py  test_with_fixtures.py
examples/starlette_example/: README.md  app.py  test_starlette_example.py
src/timetrace/: __init__.py  config.py  constants.py  context.py  exceptions.py  session.py  types.py
src/timetrace/cassette/: __init__.py  io.py
src/timetrace/cli/: __init__.py  main.py
src/timetrace/diff/: __init__.py  engine.py  report.py
src/timetrace/integrations/: __init__.py  fastapi.py  flask.py
src/timetrace/plugins/: __init__.py  base.py  httpx_plugin.py  redis_plugin.py  requests_plugin.py  sqlalchemy_plugin.py
src/timetrace/policies/: __init__.py  capture.py  redaction.py
src/timetrace/replay/: __init__.py  engine.py  errors.py  matching.py
src/timetrace/storage/: __init__.py  s3.py
src/timetrace/timeline/: __init__.py  generator.py  template.py
src/timetrace/utils/: __init__.py
src/timetracer/: __init__.py  config.py  constants.py  context.py  exceptions.py  pytest_plugin.py  session.py  types.py
src/timetracer/cassette/: __init__.py  io.py  naming.py
src/timetracer/catalog/: __init__.py
src/timetracer/cli/: __init__.py  main.py
src/timetracer/cli/commands/: __init__.py
src/timetracer/dashboard/: __init__.py  generator.py  server.py  template.py
src/timetracer/diff/: __init__.py  engine.py  report.py
src/timetracer/integrations/: __init__.py  django.py  fastapi.py  flask.py  starlette.py
src/timetracer/plugins/: __init__.py  aiohttp_plugin.py  base.py  httpx_plugin.py  motor_plugin.py  pymongo_plugin.py  redis_plugin.py  requests_plugin.py  sqlalchemy_plugin.py
src/timetracer/policies/: __init__.py  capture.py  redaction.py
src/timetracer/replay/: __init__.py  engine.py  errors.py  matching.py
src/timetracer/storage/: __init__.py  s3.py
src/timetracer/timeline/: __init__.py  generator.py  template.py
src/timetracer/utils/: __init__.py  hashing.py  time.py
tests/: conftest.py
tests/integration/: test_aiohttp_integration.py  test_motor_integration.py  test_record_replay.py  test_starlette_integration.py
tests/unit/: test_aiohttp_plugin.py  test_compression.py  test_django.py  test_hashing.py  test_matching.py  test_motor_plugin.py  test_pymongo_plugin.py  test_pytest_plugin.py  test_redaction.py
