[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timetracer"
version = "1.6.0"
description = "Time-travel debugging for FastAPI, Starlette, Flask, and Django - record API cassettes, replay with mocked dependencies"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Timetracer Contributors"}
]
keywords = ["fastapi", "starlette", "flask", "django", "debugging", "testing", "pytest", "api", "replay", "mocking", "cassette"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]
starlette = [
    "starlette>=0.27.0",
]
flask = [
    "flask>=2.0.0",
]
httpx = [
    "httpx>=0.24.0",
]
aiohttp = [
    "aiohttp>=3.8.0",
]
requests = [
    "requests>=2.28.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
]
redis = [
    "redis>=4.0.0",
]
s3 = [
    "boto3>=1.26.0",
]
django = [
    "django>=3.2",
]
motor = [
    "motor>=3.0.0",
]
pymongo = [
    "pymongo>=4.0.0",
]
all = [
    "timetracer[fastapi,starlette,flask,django,httpx,aiohttp,requests,sqlalchemy,redis,s3,motor,pymongo]",
]
dev = [
    "timetracer[all]",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "uvicorn>=0.20.0",
    "ruff>=0.1.0",
    "fakeredis>=2.0.0",
]

[project.scripts]
timetracer = "timetracer.cli.main:main"

[project.entry-points.pytest11]
timetracer = "timetracer.pytest_plugin"

[project.urls]
Homepage = "https://github.com/usv240/timetracer"
Documentation = "https://github.com/usv240/timetracer#readme"
Repository = "https://github.com/usv240/timetracer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
